xwl/clipboard.cpp
@@ -66,6 +66,10 @@ Clipboard::Clipboard(xcb_atom_t atom, QObject *parent)
 
 void Clipboard::wlSelectionChanged(KWaylandServer::AbstractDataSource *dsi)
 {
+    if (m_waitingForTargets) {
+        return;
+    }
+
     if (!ownsSelection(dsi)) {
         // Wayland native client provides new selection
         if (!m_checkConnection) {
@@ -85,6 +89,10 @@ bool Clipboard::ownsSelection(KWaylandServer::AbstractDataSource *dsi) const
 
 void Clipboard::checkWlSource()
 {
+    if (m_waitingForTargets) {
+        return;
+    }
+
     auto dsi = waylandServer()->seat()->selection();
     auto removeSource = [this] {
         if (wlSource()) {
@@ -142,6 +150,7 @@ void Clipboard::doHandleXfixesNotify(xcb_xfixes_selection_notify_event_t *event)
 
     if (X11Source *source = x11Source()) {
         source->getTargets();
+        m_waitingForTargets = true;
     } else {
         qCWarning(KWIN_XWL) << "Could not create a source from" << event << Qt::hex << (event ? event->owner : -1);
     }
@@ -149,6 +158,7 @@ void Clipboard::doHandleXfixesNotify(xcb_xfixes_selection_notify_event_t *event)
 
 void Clipboard::x11OffersChanged(const QStringList &added, const QStringList &removed)
 {
+    m_waitingForTargets = false;
     X11Source *source = x11Source();
     if (!source) {
         qCWarning(KWIN_XWL) << "offers changed when not having an X11Source!?";
